--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 -->
 	<link rel="stylesheet" type="text/css" href="Formats/style.css">
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="FOrmats/bootstrap.css">
+    <link rel="stylesheet" href="Formats/bootstrap.css">
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="Formats/bootstrap-theme.css">
