--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <I> Neural Information Processing Systems (<b>NeurIPS</b>)</I>, 2018 </font> </span>
     </p>
 
-    <span style="text-align:left"> <font face="times new roman, serif"><font size="3"><font color="#000000">&#0149 Topic Compositional Neural Language Model [<a href="https://arxiv.org/pdf/1712.09783.pdf">PDF</a>][<a href="http://people.duke.edu/~ww107/material/TCNLM.pdf">Poster</a>] <br /><b>Wenlin Wang</b>, Zhe Gan, Wenqi Wang, Dinghan Shen, Jiaji Huang, Wei Ping, Sanjeev Satheesh, Lawrence Carin <br /> <I>Artificial Intelligence and Statistics (<b>AISTATS</b>)</I>, 2018 </span><br />
+    <span style="text-align:left"> <font face="times new roman, serif"><font size="3"><font color="#000000">&#0149 Topic Compositional Neural Language Model [<a href="https://arxiv.org/pdf/1712.09783.pdf">PDF</a>][<a href="/material/TCNLM.pdf">Poster</a>] <br /><b>Wenlin Wang</b>, Zhe Gan, Wenqi Wang, Dinghan Shen, Jiaji Huang, Wei Ping, Sanjeev Satheesh, Lawrence Carin <br /> <I>Artificial Intelligence and Statistics (<b>AISTATS</b>)</I>, 2018 </span><br />
     </p>
 
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Continuous-Time Flows for Deep Generative Models [<a href="https://arxiv.org/pdf/1709.01179.pdf">PDF</a>]<br />Changyou Chen, Chunyuan Li, Liqun Chen, <b>Wenlin Wang</b>, Yunchen Pu, Lawrence Carin <br />
