Update email address

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 <p>
                 <!-- Email: <a href="mailto:wenlin.wang@duke.edu">wenlin.wang@duke.edu</a>     -->
-                E-mail: wenlin dot wang AT duke dot edu
+                E-mail: wlwang616 AT gmail dot com
                 <!-- My curriculum vitae is <a href="http://www.cse.wustl.edu/~wenlin.wang/cv.pdf">here.</a> -->
                 </p>
                 <!-- <p>
