--- a/index.html
+++ b/index.html
@@ -69,7 +69,19 @@
 <tr>
 <p>
     <td style="width:800px;height:50px">
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 An End-to-End Generative Architecture for Paraphrase Generation <br /> Qian Yang, Zhouyuan Huo, Dinghan Shen, Yong Cheng, <b>Wenlin Wang</b>, Guoyin Wang and Lawrence Carin<br />
+    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Improving Textual Network Learning with Variational Homophilic Embeddings <br /> <b>Wenlin Wang</b>, Chenyang Tao, Zhe Gan, G. Wang, L. Chen, X. Wang, R. Zhang, Q. Yang, R. Henao and L. Carin<br />
+    <I> Neural Information Processing Systems  (<b>NeurIPS</b>)</I>, 2019 </font> </span>
+    </p>
+	   
+    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 On Accelerating Training of Transformer-Based Language Models <br /> Qian Yang, <b>Wenlin Wang</b>, Lawrence Carin<br />
+    <I> Neural Information Processing Systems  (<b>NeurIPS</b>)</I>, 2019 </font> </span>
+    </p>
+	 
+    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Certified Adversarial Robustness with Addition Gaussian Noise <br /> Bai Li, Changyou Chen, <b>Wenlin Wang</b>, Lawrence Carin<br />
+    <I> Neural Information Processing Systems  (<b>NeurIPS</b>)</I>, 2019 </font> </span>
+    </p>
+	    
+    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 An End-to-End Generative Architecture for Paraphrase Generation [<a href="http://people.ee.duke.edu/~lcarin/emnlp_gap.pdf">PDF</a>]<br /> Qian Yang, Zhouyuan Huo, Dinghan Shen, Yong Cheng, <b>Wenlin Wang</b>, Guoyin Wang and Lawrence Carin<br />
     <I> Conference on Empirical Methods in Natural Language Processing  (<b>EMNLP</b>)</I>, 2019 </font> </span>
     </p>
 
