--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <I> Neural Information Processing Systems  (<b>NeurIPS</b>)</I>, 2019 </font> </span>
     </p>
 	   
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 On Accelerating Training of Transformer-Based Language Models <br /> Qian Yang, <b>Wenlin Wang</b>, Lawrence Carin<br />
+    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Ouroboros: On Accelerating Training of Transformer-Based Language Models [<a href="https://arxiv.org/pdf/1909.06695v1.pdf">PDF</a>] <br /> Qian Yang, Zhouyuan Huo, <b>Wenlin Wang</b>, Heng Huang, Lawrence Carin<br />
     <I> Neural Information Processing Systems  (<b>NeurIPS</b>)</I>, 2019 </font> </span>
     </p>
 	 
