--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <tr>
 <p>
     <td style="width:800px;height:50px">
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Improving Textual Network Learning with Variational Homophilic Embeddings <br /> <b>Wenlin Wang</b>, Chenyang Tao, Zhe Gan, G. Wang, L. Chen, X. Wang, R. Zhang, Q. Yang, R. Henao and L. Carin<br />
+    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Improving Textual Network Learning with Variational Homophilic Embeddings [<a href="https://arxiv.org/pdf/1909.13456.pdf">PDF</a>] <br /> <b>Wenlin Wang</b>, Chenyang Tao, Zhe Gan, G. Wang, L. Chen, X. Wang, R. Zhang, Q. Yang, R. Henao and L. Carin<br />
     <I> Neural Information Processing Systems  (<b>NeurIPS</b>)</I>, 2019 </font> </span>
     </p>
 	   
