--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <tr>
 <p>
     <td style="width:800px;height:50px">
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Collaborative Filtering with A Synthetic Feedback Loop [<a href="https://arxiv.org/pdf/1910.12735.pdf">PDF</a>] <br /><b>Wenlin Wang</b>, Hongteng Xu, Ruiyi Zhang, Wenqi Wang, Lawrence Carin <br /> </span><br />
+    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Collaborative Filtering with A Synthetic Feedback Loop [<a href="https://arxiv.org/pdf/1910.12735.pdf">PDF</a>] <br /><b>Wenlin Wang</b>, Hongteng Xu, Ruiyi Zhang, Wenqi Wang, Lawrence Carin <br /> </span>
      </font> </span>
     </p>
 	    
