--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <tr>
 <p>
     <td style="width:800px;height:50px">
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Graph-Driven Generative Models for Heterogeneous Multi-Task Learning [PDF] <br /> <b>Wenlin Wang</b>, Hongteng Xu, Zhe Gan, Bai Li, Guoyin Wang, Liqun Chen, Qian Yang, Wenqi Wang and Lawrence Carin<br />
+    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Graph-Driven Generative Models for Heterogeneous Multi-Task Learning [<a href="https://arxiv.org/pdf/1911.08709.pdf">PDF</a>] <br /> <b>Wenlin Wang</b>, Hongteng Xu, Zhe Gan, Bai Li, Guoyin Wang, Liqun Chen, Qian Yang, Wenqi Wang and Lawrence Carin<br />
     <I> Proc. AAAI Conference on Artificial Intelligence  (<b>AAAI</b>)</I>, 2020 <br /> <I> Workshop on Graph Representation Learning, Neural Information Processing Systems  (<b>NeurIPS</b>)</I>, 2019</font> </span>
     </p>
 	    
