--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <I> Neural Information Processing Systems  (<b>NeurIPS</b>)</I>, 2019 </font> </span>
     </p>
 	 
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Certified Adversarial Robustness with Addition Gaussian Noise <br /> Bai Li, Changyou Chen, <b>Wenlin Wang</b>, Lawrence Carin<br />
+    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Certified Adversarial Robustness with Addition Gaussian Noise [<a href="https://arxiv.org/pdf/1809.03113.pdf">PDF</a>] <br /> Bai Li, Changyou Chen, <b>Wenlin Wang</b>, Lawrence Carin<br />
     <I> Neural Information Processing Systems  (<b>NeurIPS</b>)</I>, 2019 </font> </span>
     </p>
 	    
