--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <p>
     <td style="width:800px;height:50px">
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Nested-Wasserstein Self-Imitation Learning for Sequence Generation [PDF] <br /> Ruiyi Zhang, Changyou Chen, Zhe Gan, Zheng Wen, <b>Wenlin Wang</b>, Lawrence Carin<br />
-    <I> Artificial Intelligence and Statistics  (<b>AISTATS</b>)</I>, 2020 </font> </span>
+    <I> Artificial Intelligence and Statistics  (<b>AISTATS</b>)</I>, 2020 <br /> <I>Workshop on Deep Reinforcement Learning, Neural Information Processing Systems (<b>NeurIPS</b>)</I>, 2019 </font> </span>
     </p>    
 	    
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Graph-Driven Generative Models for Heterogeneous Multi-Task Learning [<a href="https://arxiv.org/pdf/1911.08709.pdf">PDF</a>] <br /> <b>Wenlin Wang</b>, Hongteng Xu, Zhe Gan, Bai Li, Guoyin Wang, Liqun Chen, Qian Yang, Wenqi Wang and Lawrence Carin<br />
@@ -164,9 +164,9 @@
      </font> </span>
     </p>
 
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Nested-Wasserstein Self-Imitation Learning for Sequence Generation [PDF] <br /> Ruiyi Zhang, Changyou Chen, Zhe Gan, Zheng Wen, <b>Wenlin Wang</b>, Chenyang Tao, Lawrence Carin <br />  <I>Workshop on Deep Reinforcement Learning, Neural Information Processing Systems (<b>NeurIPS</b>)</I>, 2019 </span><br />
+<!--     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Nested-Wasserstein Self-Imitation Learning for Sequence Generation [PDF] <br /> Ruiyi Zhang, Changyou Chen, Zhe Gan, Zheng Wen, <b>Wenlin Wang</b>, Chenyang Tao, Lawrence Carin <br />  <I>Workshop on Deep Reinforcement Learning, Neural Information Processing Systems (<b>NeurIPS</b>)</I>, 2019 </span><br />
      </font> </span>
-    </p>
+    </p> -->
 	    
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Sequence Generation with Guider Network  [<a href="https://arxiv.org/pdf/1811.00696.pdf">PDF</a>] <br />Ruiyi Zhang, Changyou Chen, Zhe Gan, <b>Wenlin Wang</b>, Liqun Chen, Dinghan Shen, Guoyin Wang, Lawrence Carin <br />  <I>Workshop on Uncertainty & Robustness in Deep Learning, Internatial Conference on Machine Learning (<b>ICML</b>)</I>, 2019 </span><br />
      </font> </span>
