--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <I> Proc. AAAI Conference on Artificial Intelligence  (<b>AAAI</b>)</I>, 2020 <br /> <I> Workshop on Graph Representation Learning, Neural Information Processing Systems  (<b>NeurIPS</b>)</I>, 2019</font> </span>
     </p>
 	    
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Sequence Generation with Optimal-Transport-Enhanced Reinforcement Learning [<a href="http://people.ee.duke.edu/~lcarin/AAAI-ChenLQ.9360.pdf">PDF</a>] <br /> Liqun Chen, Ke Bai, Chenyang Tao, Yizhe Zhang, Guoyin Wang, <b>Wenlin Wang</b>, Ricardo Henao and Lawrence Carin<br />
+    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Sequence Generation with Optimal-Transport-Enhanced Reinforcement Learning [<a href="http://people.ee.duke.edu/~lcarin/AAAI-ChenLQ.9360.pdf">PDF</a>] (<font color="#FF0000">Spotlight</font>) <br /> Liqun Chen, Ke Bai, Chenyang Tao, Yizhe Zhang, Guoyin Wang, <b>Wenlin Wang</b>, Ricardo Henao and Lawrence Carin<br />
     <I> Proc. AAAI Conference on Artificial Intelligence  (<b>AAAI</b>)</I>, 2020 </font> </span>
     </p>
 
