--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <tr>
 <p>
     <td style="width:800px;height:50px">  
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Improving Adversarial Text Generation by Modeling the Distant Future [<a href="https://arxiv.org/pdf/1811.00696.pdf">PDF</a>] (<font color="#FF0000">Spotlight</font>)<br /> Ruiyi Zhang, Changyou Chen, Zhe Gan, <b>Wenlin Wang</b>, Dinghan Shen, Guoyin Wang, Zheng Wen and Lawrence Carin<br />
+    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Improving Adversarial Text Generation by Modeling the Distant Future [<a href="https://arxiv.org/pdf/1811.00696.pdf">PDF</a>] <br /> Ruiyi Zhang, Changyou Chen, Zhe Gan, <b>Wenlin Wang</b>, Dinghan Shen, Guoyin Wang, Zheng Wen and Lawrence Carin<br />
     <I> Annual Meeting of the Association for Computational Linguistics (<b>ACL</b>)</I>, 2020 <br /> <I> Workshop on Uncertainty & Robustness in Deep Learning, Internatial Conference on Machine Learning  (<b>ICML</b>)</I>, 2019</font> </span>
     </p>
 	    
