--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
 <tr>
 <p>
     <td style="width:800px;height:50px">  
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Improving Adversarial Text Generation by Modeling the Distant Future [<a href="https://arxiv.org/pdf/1811.00696.pdf">PDF</a>] <br /> Ruiyi Zhang, Changyou Chen, Zhe Gan, <b>Wenlin Wang</b>, Dinghan Shen, Guoyin Wang, Zheng Wen and Lawrence Carin<br />
-    <I> Annual Meeting of the Association for Computational Linguistics (<b>ACL</b>)</I>, 2020 <br />  </span>
+    	<span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Improving Adversarial Text Generation by Modeling the Distant Future [<a href="https://arxiv.org/pdf/1811.00696.pdf">PDF</a>] <br /> Ruiyi Zhang, Changyou Chen, Zhe Gan, <b>Wenlin Wang</b>, Dinghan Shen, Guoyin Wang, Zheng Wen and Lawrence Carin<br />
+    	<I> Annual Meeting of the Association for Computational Linguistics (<b>ACL</b>)</I>, 2020 <br />
+	<I> Workshop on Uncertainty & Robustness in Deep Learning, Internatial Conference on Machine Learning (<b>ICML</b>)</I>, 2019<br />  </span>
     </p>
 	    
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Graph-Driven Generative Models for Heterogeneous Multi-Task Learning [<a href="https://arxiv.org/pdf/1911.08709.pdf">PDF</a>] (<font color="#FF0000">Spotlight</font>)<br /> <b>Wenlin Wang</b>, Hongteng Xu, Zhe Gan, Bai Li, Guoyin Wang, Liqun Chen, Qian Yang, Wenqi Wang and Lawrence Carin<br />
@@ -94,7 +95,8 @@
     </p>
 	 
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Certified Adversarial Robustness with Addition Gaussian Noise [<a href="https://arxiv.org/pdf/1809.03113.pdf">PDF</a>] <br /> Bai Li, Changyou Chen, <b>Wenlin Wang</b>, Lawrence Carin<br />
-    <I> Neural Information Processing Systems  (<b>NeurIPS</b>)</I>, 2019 </font> </span>
+    	    <I>Workshop on Real-world Sequential Decision Making, Internatial Conference on Machine Learning (<b>ICML</b>)</I>, 2019 </span>
+	    <I> Neural Information Processing Systems  (<b>NeurIPS</b>)</I>, 2019 </font> </span>
     </p>
 	    
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 An End-to-End Generative Architecture for Paraphrase Generation [<a href="http://people.ee.duke.edu/~lcarin/emnlp_gap.pdf">PDF</a>]<br /> Qian Yang, Zhouyuan Huo, Dinghan Shen, Yong Cheng, <b>Wenlin Wang</b>, Guoyin Wang and Lawrence Carin<br />
@@ -154,7 +156,7 @@
  </tbody></table>
 
 
-<h4>Workshops & Preprints</h4>
+<!-- <h4>Workshops & Preprints</h4>
 <table class="table", style="width:900px">
 <tbody>
 <tr>
@@ -178,9 +180,8 @@
 
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Earliness-Aware Deep Convolutional Networks for Early Time Series Classification [<a href="https://arxiv.org/pdf/1611.04578.pdf">PDF</a>]<br /><b>Wenlin Wang</b>, Changyou Chen, Wenqi Wang, Piyush Rai, Lawrence Carin  <br />
     </p>
-
 </tr>
-</tbody></table>
+</tbody></table> -->
 
 
 <!-- <h4>Experience</h4>
