--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     </p>
 	 
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Certified Adversarial Robustness with Addition Gaussian Noise [<a href="https://arxiv.org/pdf/1809.03113.pdf">PDF</a>] <br /> Bai Li, Changyou Chen, <b>Wenlin Wang</b>, Lawrence Carin<br />
-    	    <I>Workshop on Real-world Sequential Decision Making, Internatial Conference on Machine Learning (<b>ICML</b>)</I>, 2019 </span>
-	    <I> Neural Information Processing Systems  (<b>NeurIPS</b>)</I>, 2019 </font> </span>
+    	    <I> Neural Information Processing Systems  (<b>NeurIPS</b>)</I>, 2019 </font> </span> <br />
+	    <I>Workshop on Real-world Sequential Decision Making, Internatial Conference on Machine Learning (<b>ICML</b>)</I>, 2019 </span>
     </p>
 	    
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 An End-to-End Generative Architecture for Paraphrase Generation [<a href="http://people.ee.duke.edu/~lcarin/emnlp_gap.pdf">PDF</a>]<br /> Qian Yang, Zhouyuan Huo, Dinghan Shen, Yong Cheng, <b>Wenlin Wang</b>, Guoyin Wang and Lawrence Carin<br />
