--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Nested-Wasserstein Self-Imitation Learning for Sequence Generation [PDF] <br /> Ruiyi Zhang, Changyou Chen, Zhe Gan, Zheng Wen, <b>Wenlin Wang</b>, Lawrence Carin<br />
     <I> Artificial Intelligence and Statistics  (<b>AISTATS</b>)</I>, 2020 <br /> <I>Workshop on Deep Reinforcement Learning, Neural Information Processing Systems (<b>NeurIPS</b>)</I>, 2019 </font> </span>
     </p> 
-	    
+	
+    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Improving Text Generation with Student-Forcing Optimal Transport [<PDF]<br /> J. Li, C.Li, G. Wang, H. Fu, Y. Lin, L. Chen, Y. Zhang, C. Tao, R. Zhang, <b>Wenlin Wang</b>, D. Shen, Q. Yang and L. Carin<br />
+    <I> Conference on Empirical Methods in Natural Language Processing  (<b>EMNLP</b>)</I>, 2020 </font> </span>
+    </p>
+		    
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Improving Textual Network Learning with Variational Homophilic Embeddings [<a href="https://arxiv.org/pdf/1909.13456.pdf">PDF</a>] <br /> <b>Wenlin Wang</b>, Chenyang Tao, Zhe Gan, G. Wang, L. Chen, X. Wang, R. Zhang, Q. Yang, R. Henao and L. Carin<br />
     <I> Neural Information Processing Systems  (<b>NeurIPS</b>)</I>, 2019 </font> </span>
     </p>
