--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
     <I> Proc. AAAI Conference on Artificial Intelligence  (<b>AAAI</b>)</I>, 2020 </font> </span>
     </p>
 
+    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Zero-Shot Recognition via Optimal Transport  [PDF] <br /><b>Wenlin Wang</b>, Hongteng Xu, Guoyin Wang, Wenqi Wang, Lawrence Carin <br />  
+       <I>Workshop on Applications of Computer Vision (<b>WACV</b>)</I>, 2021 </span><br />
+       <I>Workshop on Optimal Transport on Machine Learning, Neural Information Processing Systems (<b>NeurIPS</b>)</I>, 2019 </span><br />
+     </font> </span>
+    </p>
+	    
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Nested-Wasserstein Self-Imitation Learning for Sequence Generation [PDF] <br /> Ruiyi Zhang, Changyou Chen, Zhe Gan, Zheng Wen, <b>Wenlin Wang</b>, Lawrence Carin<br />
     <I> Artificial Intelligence and Statistics  (<b>AISTATS</b>)</I>, 2020 <br /> <I>Workshop on Deep Reinforcement Learning, Neural Information Processing Systems (<b>NeurIPS</b>)</I>, 2019 </font> </span>
     </p> 
