--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <I> Artificial Intelligence and Statistics  (<b>AISTATS</b>)</I>, 2020 <br /> <I>Workshop on Deep Reinforcement Learning, Neural Information Processing Systems (<b>NeurIPS</b>)</I>, 2019 </font> </span>
     </p> 
 	
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Improving Text Generation with Student-Forcing Optimal Transport [<PDF]<br /> J. Li, C.Li, G. Wang, H. Fu, Y. Lin, L. Chen, Y. Zhang, C. Tao, R. Zhang, <b>Wenlin Wang</b>, D. Shen, Q. Yang and L. Carin<br />
+    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Improving Text Generation with Student-Forcing Optimal Transport [PDF]<br /> J. Li, C.Li, G. Wang, H. Fu, Y. Lin, L. Chen, Y. Zhang, C. Tao, R. Zhang, <b>Wenlin Wang</b>, D. Shen, Q. Yang and L. Carin<br />
     <I> Conference on Empirical Methods in Natural Language Processing  (<b>EMNLP</b>)</I>, 2020 </font> </span>
     </p>
 		    
