--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </p>
 
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Zero-Shot Recognition via Optimal Transport  [PDF] <br /><b>Wenlin Wang</b>, Hongteng Xu, Guoyin Wang, Wenqi Wang, Lawrence Carin <br />  
-       <I>Workshop on Applications of Computer Vision (<b>WACV</b>)</I>, 2021 </span><br />
+       <I>Winter Conference on Applications of Computer Vision (<b>WACV</b>)</I>, 2021 </span><br />
        <I>Workshop on Optimal Transport on Machine Learning, Neural Information Processing Systems (<b>NeurIPS</b>)</I>, 2019 </span><br />
      </font> </span>
     </p>
