--- a/index.html
+++ b/index.html
@@ -69,7 +69,17 @@
 <tr>
 <p>
     <td style="width:800px;height:50px">  
-    	<span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Improving Adversarial Text Generation by Modeling the Distant Future [<a href="https://arxiv.org/pdf/1811.00696.pdf">PDF</a>] <br /> Ruiyi Zhang, Changyou Chen, Zhe Gan, <b>Wenlin Wang</b>, Dinghan Shen, Guoyin Wang, Zheng Wen and Lawrence Carin<br />
+    	<span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Learning to Recommend from Sparse Data via Generative User Feedback [<a href="https://arxiv.org/pdf/1910.12735.pdf">PDF</a>] <br />  <b>Wenlin Wang</b>, Hongteng Xu, Ruiyi Zhang, Wenqi Wang, Piyush Rai and Lawrence Carin<br />
+    	<I> Proc. AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</I>, 2021 <br />  </span>
+    </p>
+
+    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Zero-Shot Recognition via Optimal Transport  [<a href="https://arxiv.org/pdf/1910.09057.pdf">PDF</a>] <br /><b>Wenlin Wang</b>, Hongteng Xu, Guoyin Wang, Wenqi Wang, Lawrence Carin <br />  
+       <I>Winter Conference on Applications of Computer Vision (<b>WACV</b>)</I>, 2021 </span><br />
+       <I>Workshop on Optimal Transport on Machine Learning, Neural Information Processing Systems (<b>NeurIPS</b>)</I>, 2019 </span><br />
+     </font> </span>
+    </p>
+
+    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Improving Adversarial Text Generation by Modeling the Distant Future [<a href="https://arxiv.org/pdf/1811.00696.pdf">PDF</a>] <br /> Ruiyi Zhang, Changyou Chen, Zhe Gan, <b>Wenlin Wang</b>, Dinghan Shen, Guoyin Wang, Zheng Wen and Lawrence Carin<br />
     	<I> Annual Meeting of the Association for Computational Linguistics (<b>ACL</b>)</I>, 2020 <br />
 	<I> Workshop on Uncertainty & Robustness in Deep Learning, Internatial Conference on Machine Learning (<b>ICML</b>)</I>, 2019<br />  </span>
     </p>
@@ -81,18 +91,12 @@
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Sequence Generation with Optimal-Transport-Enhanced Reinforcement Learning [<a href="http://people.ee.duke.edu/~lcarin/AAAI-ChenLQ.9360.pdf">PDF</a>] (<font color="#FF0000">Spotlight</font>) <br /> Liqun Chen, Ke Bai, Chenyang Tao, Yizhe Zhang, Guoyin Wang, <b>Wenlin Wang</b>, Ricardo Henao and Lawrence Carin<br />
     <I> Proc. AAAI Conference on Artificial Intelligence  (<b>AAAI</b>)</I>, 2020 </font> </span>
     </p>
-
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Zero-Shot Recognition via Optimal Transport  [PDF] <br /><b>Wenlin Wang</b>, Hongteng Xu, Guoyin Wang, Wenqi Wang, Lawrence Carin <br />  
-       <I>Winter Conference on Applications of Computer Vision (<b>WACV</b>)</I>, 2021 </span><br />
-       <I>Workshop on Optimal Transport on Machine Learning, Neural Information Processing Systems (<b>NeurIPS</b>)</I>, 2019 </span><br />
-     </font> </span>
-    </p>
 	    
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Nested-Wasserstein Self-Imitation Learning for Sequence Generation [PDF] <br /> Ruiyi Zhang, Changyou Chen, Zhe Gan, Zheng Wen, <b>Wenlin Wang</b>, Lawrence Carin<br />
+    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Nested-Wasserstein Self-Imitation Learning for Sequence Generation [<a href="https://arxiv.org/pdf/2001.06944.pdf">PDF</a>] <br /> Ruiyi Zhang, Changyou Chen, Zhe Gan, Zheng Wen, <b>Wenlin Wang</b>, Lawrence Carin<br />
     <I> Artificial Intelligence and Statistics  (<b>AISTATS</b>)</I>, 2020 <br /> <I>Workshop on Deep Reinforcement Learning, Neural Information Processing Systems (<b>NeurIPS</b>)</I>, 2019 </font> </span>
     </p> 
 	
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Improving Text Generation with Student-Forcing Optimal Transport [PDF]<br /> J. Li, C.Li, G. Wang, H. Fu, Y. Lin, L. Chen, Y. Zhang, C. Tao, R. Zhang, <b>Wenlin Wang</b>, D. Shen, Q. Yang and L. Carin<br />
+    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Improving Text Generation with Student-Forcing Optimal Transport [<a href="https://arxiv.org/pdf/2010.05994.pdf">PDF</a>]<br /> G. Wang, C.Li, J. Li, H. Fu, Y. Lin, L. Chen, Y. Zhang, C. Tao, R. Zhang, <b>Wenlin Wang</b>, D. Shen, Q. Yang and L. Carin<br />
     <I> Conference on Empirical Methods in Natural Language Processing  (<b>EMNLP</b>)</I>, 2020 </font> </span>
     </p>
 		    
