--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
      </font> </span>
     </p>
 
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Improving Adversarial Text Generation by Modeling the Distant Future [<a href="https://arxiv.org/pdf/1811.00696.pdf">PDF</a>] <br /> Ruiyi Zhang, Changyou Chen, Zhe Gan, <b>Wenlin Wang</b>, Dinghan Shen, Guoyin Wang, Zheng Wen and Lawrence Carin<br />
-    	<I> Annual Meeting of the Association for Computational Linguistics (<b>ACL</b>)</I>, 2020 <br />
-	<I> Workshop on Uncertainty & Robustness in Deep Learning, Internatial Conference on Machine Learning (<b>ICML</b>)</I>, 2019<br />  </span>
-    </p>
+<!--     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Improving Adversarial Text Generation by Modeling the Distant Future [<a href="https://arxiv.org/pdf/1811.00696.pdf">PDF</a>] <br /> Ruiyi Zhang, Changyou Chen, Zhe Gan, <b>Wenlin Wang</b>, Dinghan Shen, Guoyin Wang, Zheng Wen and Lawrence Carin<br /> -->
+<!--     	<I> Annual Meeting of the Association for Computational Linguistics (<b>ACL</b>)</I>, 2020 <br /> -->
+<!-- 	<I> Workshop on Uncertainty & Robustness in Deep Learning, Internatial Conference on Machine Learning (<b>ICML</b>)</I>, 2019<br />  </span> -->
+<!--     </p> -->
 	    
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Graph-Driven Generative Models for Heterogeneous Multi-Task Learning [<a href="https://arxiv.org/pdf/1911.08709.pdf">PDF</a>] (<font color="#FF0000">Spotlight</font>)<br /> <b>Wenlin Wang</b>, Hongteng Xu, Zhe Gan, Bai Li, Guoyin Wang, Liqun Chen, Qian Yang, Wenqi Wang and Lawrence Carin<br />
     <I> Proc. AAAI Conference on Artificial Intelligence  (<b>AAAI</b>)</I>, 2020 <br /> <I> Workshop on Graph Representation Learning, Neural Information Processing Systems  (<b>NeurIPS</b>)</I>, 2019</font> </span>
@@ -92,9 +92,9 @@
     <I> Proc. AAAI Conference on Artificial Intelligence  (<b>AAAI</b>)</I>, 2020 </font> </span>
     </p>
 	    
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Nested-Wasserstein Self-Imitation Learning for Sequence Generation [<a href="https://arxiv.org/pdf/2001.06944.pdf">PDF</a>] <br /> Ruiyi Zhang, Changyou Chen, Zhe Gan, Zheng Wen, <b>Wenlin Wang</b>, Lawrence Carin<br />
-    <I> Artificial Intelligence and Statistics  (<b>AISTATS</b>)</I>, 2020 <br /> <I>Workshop on Deep Reinforcement Learning, Neural Information Processing Systems (<b>NeurIPS</b>)</I>, 2019 </font> </span>
-    </p> 
+<!--     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Nested-Wasserstein Self-Imitation Learning for Sequence Generation [<a href="https://arxiv.org/pdf/2001.06944.pdf">PDF</a>] <br /> Ruiyi Zhang, Changyou Chen, Zhe Gan, Zheng Wen, <b>Wenlin Wang</b>, Lawrence Carin<br /> -->
+<!--     <I> Artificial Intelligence and Statistics  (<b>AISTATS</b>)</I>, 2020 <br /> <I>Workshop on Deep Reinforcement Learning, Neural Information Processing Systems (<b>NeurIPS</b>)</I>, 2019 </font> </span> -->
+<!--     </p>  -->
 	
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Improving Text Generation with Student-Forcing Optimal Transport [<a href="https://arxiv.org/pdf/2010.05994.pdf">PDF</a>]<br /> G. Wang, C.Li, J. Li, H. Fu, Y. Lin, L. Chen, Y. Zhang, C. Tao, R. Zhang, <b>Wenlin Wang</b>, D. Shen, Q. Yang and L. Carin<br />
     <I> Conference on Empirical Methods in Natural Language Processing  (<b>EMNLP</b>)</I>, 2020 </font> </span>
@@ -125,13 +125,13 @@
     <I> Conference of the North American Chapter of the Association for Computational Linguistics (<b>NAACL</b>)</I>, 2019 </font> </span>
     </p>
 
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 A Convergence Analysis For a Class of Practical Variance-reduction Stochastic Gradient MCMC [<a href="https://arxiv.org/pdf/1709.01180.pdf">PDF</a>] <br />Changyou Chen, <b>Wenlin Wang</b>, Yizhe Zhang, Qinliang Su, Lawrence Carin <br />
-    <I> Science China Information Science, vol.62 </I>, 2019 </font> </span>
-    </p>
+<!--     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 A Convergence Analysis For a Class of Practical Variance-reduction Stochastic Gradient MCMC [<a href="https://arxiv.org/pdf/1709.01180.pdf">PDF</a>] <br />Changyou Chen, <b>Wenlin Wang</b>, Yizhe Zhang, Qinliang Su, Lawrence Carin <br /> -->
+<!--     <I> Science China Information Science, vol.62 </I>, 2019 </font> </span> -->
+<!--     </p> -->
 
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 InverseNet: Solving Inverse Problems of Multimedia Data with Splitting Networks [<a href="https://arxiv.org/pdf/1712.00202.pdf">PDF</a>] <br />Qi Wei, Kai Fan, <b>Wenlin Wang</b>, Tianhang Zheng, Chakraborty Amit, Katherine Heller, Changyou Chen, Kui Ren <br />
-    <I> IEEE International Conference on Multimedia and Expo (<b>ICME</b>)</I>, 2019 </font> </span>
-    </p>
+<!--     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 InverseNet: Solving Inverse Problems of Multimedia Data with Splitting Networks [<a href="https://arxiv.org/pdf/1712.00202.pdf">PDF</a>] <br />Qi Wei, Kai Fan, <b>Wenlin Wang</b>, Tianhang Zheng, Chakraborty Amit, Katherine Heller, Changyou Chen, Kui Ren <br /> -->
+<!--     <I> IEEE International Conference on Multimedia and Expo (<b>ICME</b>)</I>, 2019 </font> </span> -->
+<!--     </p> -->
 
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Distilled Wasserstein Learning for Word Embedding and Topic Modeling [<a href="https://arxiv.org/pdf/1809.04705.pdf">PDF</a>] <br />Hongteng Xu, <b>Wenlin Wang</b>, Wei Liu, Lawrence Carin <br />
     <I> Neural Information Processing Systems (<b>NeurIPS</b>)</I>, 2018 </font> </span>
@@ -156,8 +156,8 @@
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 Zero-Shot Learning via Class-Conditioned Deep Generative Models [<a href="https://arxiv.org/pdf/1711.05820.pdf">PDF</a>][<a href="material/ZSL.pdf" target="_blank" rel="nofollow">Slides</a>]</font> (<font color="#FF0000">Oral</font>) <br /><b>Wenlin Wang</b>, Yunchen Pu, Vinay Kumar Verma, Kai Fan, Yizhe Zhang, Changyou Chen, Piyush Rai, Lawrence Carin <br />  <I>Proc. AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</I>, 2018 </span><br />
     </p>
 
-    <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 A Unified Particle-Optimization Framework for Scalable Bayesian Sampling </font> [<a href="https://arxiv.org/pdf/1805.11659.pdf">PDF</a>](<font color="#FF0000">Oral</font>)<br />Changyou Chen, Ruiyi Zhang, <b>Wenlin Wang</b>, Bai Li, Liqun Chen, Lawrence Carin <br />  <I>The Conference on Uncertainty in Artificial Intelligence (<b>UAI</b>)</I>, 2018 </span><br />
-    </p>
+<!--     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149 A Unified Particle-Optimization Framework for Scalable Bayesian Sampling </font> [<a href="https://arxiv.org/pdf/1805.11659.pdf">PDF</a>](<font color="#FF0000">Oral</font>)<br />Changyou Chen, Ruiyi Zhang, <b>Wenlin Wang</b>, Bai Li, Liqun Chen, Lawrence Carin <br />  <I>The Conference on Uncertainty in Artificial Intelligence (<b>UAI</b>)</I>, 2018 </span><br /> -->
+<!--     </p> -->
 
     <span style="text-align:left"><font face="times new roman, serif"><font size="3"><font color="#000000"><span style="line-height:normal">&#0149  Wide Compression: Tensor Ring Nets [<a href="https://arxiv.org/pdf/1802.09052.pdf">PDF</a>] <br />Wenqi Wang, Yifan Sun, Brian Eriksson, <b>Wenlin Wang</b>, Vaneet Aggarwal <br /> <I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)</I>, 2018 </span><br />
     </p>
