--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img src="img/Wenlin_small.png" width="220" height="220">
             </td>
             <td>
-                <p> I received my Ph.D. degree from <a href="https://duke.edu/">Duke University</a> in summer 2019, advised by <a href="http://people.ee.duke.edu/~lcarin/">Prof. Lawrence Carin</a>.
+                <p> I received my Ph.D. degree from <a href="https://duke.edu/">Duke University</a> in summer 2019, advised by <a href="http://people.ee.duke.edu/~lcarin/">Dr. Lawrence Carin</a>.
                 <p>
                 Before joining Duke, I earned M.S. degree from <a href="https://wustl.edu/">Washington University in St. Louis</a> and B.Eng. degree from <a href="http://en.ustc.edu.cn/">University of Science and Technology of China</a> in 2015 and 2013, respectively. 
                 </p>
